# alt_means_sans_k

./: .gitignore  Fastnode2vec.ipynb  LFR.txt.gz.wv  LFR_n_10000_tau1_3_tau2_1.5_mu_0.2_k_5_mincomm_25_seed_10.txt.gz.wv  README.md  environment.yml  environment_gensim.yml  pyproject.toml
archive/kmeans/: creating and embedding LFR nets.ipynb  mixing_parameter_testrun.txt  mu_change_test.py  result_replication.ipynb
are_angles_important/: Angular Synchronization.ipynb  LFR Testing.ipynb  SBM testing.ipynb  Untitled.ipynb
libs/: README.md
notebooks/20231030_result_replication/: result_replication.ipynb
notebooks/20231108_changing_mu/: Adding X-Means and Fixing DBSCAN.ipynb  Changing the mixing parameter.ipynb  creating and embedding LFR nets.ipynb
notebooks/20231116_adding_alternative_methods/: Adding Methods for Comparison.ipynb  Adding alternative embedding methods.ipynb  Testing DBSCAN.ipynb  X-Means et alia.ipynb  X-Means.ipynb  experiment_mu_change.py  experiment_mu_change_2.py  testing_similarity_scores_scripts.ipynb
notebooks/20231209_debugging_parallelizaton/: LFR_network_creation_error.ipynb  Testing DBSCAN.ipynb  experiment_2.1_10.ipynb  experiment_2.1_5.ipynb  experiment_3_10.ipynb  experiment_3_5.ipynb  experiment_3_50.ipynb  experiment_mu_change_no_parallel.py  (+1 more)
scratchbook/: LFR_n_10000_tau1_3_tau2_1.5_mu_0.2_k_5_mincomm_25_seed_10.txt.gz.wv  readme.txt  result_replication.ipynb
scripts/: clustering_method_metric_change.py  elem_centric_similarity.py  nets_and_embeddings.py  plotting.py  similarity_scores.py
snakemake/: snakemake_nets
(+127 files in other folders)
